# createfi-block

./: .gitignore  CREATEFI_README.md  Cargo.toml  DEPLOY_NOW.md  FRESH_REPOSITORY_README.md  GITHUB_DEPLOYMENT_SUMMARY.md  PHASE1_COMPLETE.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  README.md  TEST_REPORT.md  deploy_to_github.sh  test_blockchain.sh  verify_project.sh
.github/workflows/: ci.yml
frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  WalletConnect.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Governance.tsx  Trading.tsx  Vaults.tsx
frontend/src/services/: blockchain.ts
pallets/create-token/: Cargo.toml
pallets/create-token/src/: lib.rs  weights.rs
pallets/dao/: Cargo.toml
pallets/dao/src/: lib.rs  weights.rs
pallets/dex/: Cargo.toml
pallets/dex/src/: lib.rs  weights.rs
pallets/fee-engine/: Cargo.toml
pallets/fee-engine/src/: lib.rs  weights.rs
pallets/fi-stablecoin/: Cargo.toml
pallets/fi-stablecoin/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
